Added output to DocTR to output images with bounding boxes on the recognised texts

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-pytesseract
+# pytesseract
 pillow
 torch 
 torchvision 
 torchaudio
-easyocr
-paddlepaddle
-paddleocr
+# easyocr
+# paddlepaddle
+# paddleocr
 python-doctr[tensorflow]
 matplotlib
-mplcursors 
+# mplcursors 
+opencv-python
